Remove List.of and add @Desugar